Fix issue with scrollbars on chrome + firefox

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -15,3 +15,12 @@ html {
   font-family: "Minecraft";
   box-sizing: border-box;
 }
+
+body::-webkit-scrollbar {
+  display: none;
+  -ms-overflow-style: none;
+}
+
+html {
+  scrollbar-width: none;
+}
